--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -148,19 +148,25 @@
 
                     <!-- Texto Biografía -->
                     <div class="text-sm text-cura-accentLight text-left mt-3 space-y-3 leading-relaxed">
-                        <p>
-                            Franco Agustín Paganini es Técnico en Sistemas con más de diez años de experiencia en soporte, infraestructura y soluciones tecnológicas aplicadas al sector público. Complementó su formación con certificaciones internacionales en Interoperabilidad en Salud (OPS/OMS), Estándar FHIR HL7, Sistemas de Información en Salud, Derecho Presupuestario, Legislación y Técnica Normativa</strong>, y otras especializaciones vinculadas a la modernización del Estado.
-                        </p>
-<p> Actualmente cursa el Programa <steong>Especializado en Gestión de Salud Digital (ADEN Business School + George Washington University)</steong>, orientado a transformación digital sanitaria, seguridad del paciente, telesalud e implementación de sistemas de información en salud. </p>
-                        <p>
-                           Su trabajo se centra en la transformación digital, la mejora de la gestión pública y el diseño de herramientas concretas que aumenten la calidad, eficiencia y transparencia del sistema sanitario. <strong>Desde principios del 2025 impulsa el desarrollo de la Ley C.U.R.A.</strong>, una iniciativa integral que propone <strong>unificar la historia clínica, estandarizar procesos médicos y garantizar seguridad, trazabilidad e interoperabilidad plena en todo el país.</strong>
-                        </p>
-                           <p>
-                          La motivación del proyecto surge de experiencias personales dentro del sistema de salud, donde vivió en carne propia la fragmentación, la pérdida de información, la falta de interoperabilidad, diagnósticos inconexos, trámites repetidos y situaciones que impactaron en su atención médica. Ese recorrido lo llevó a transformar la frustración en una propuesta técnica, normativa y operativa con una sola meta: que ninguna persona vuelva a atravesar esos problemas.
-                        </p>
-                           <p>
-                          Con una visión centrada en el paciente, un enfoque práctico y un compromiso real con la modernización del sistema sanitario, Franco impulsa la Ley C.U.R.A. como un cambio estructural necesario para el futuro de la salud en Argentina.
-                        </p>
+                  <p>
+        <strong>Franco Agustín Paganini</strong> es <strong>Especialista en Gestión de Salud Digital</strong> (ADEN Business School / George Washington University) y profesional de tecnologías de la información con una sólida trayectoria en el sector público.
+    </p>
+
+    <p>
+        Su formación combina la arquitectura técnica con la estrategia sanitaria. Cursó estudios en la <strong>Licenciatura en Sistemas (Universidad Nacional de Luján)</strong>, lo que le brindó los fundamentos lógicos para el diseño de infraestructuras complejas, y cuenta con más de diez años de experiencia en soporte y soluciones tecnológicas. Ha complementado este perfil con certificaciones internacionales de la <strong>OPS/OMS</strong> en Sistemas de Información y el estándar de interoperabilidad <strong>HL7 FHIR</strong>, además de especializaciones en Derecho Presupuestario y Técnica Normativa.
+    </p>
+
+    <p>
+        Es el autor intelectual e impulsor de la <strong>Ley C.U.R.A.</strong>, una iniciativa de infraestructura crítica diseñada para modernizar el Estado. Su trabajo se centra en transformar la gestión pública mediante herramientas concretas que aumenten la calidad, la eficiencia del gasto y la transparencia del sistema sanitario, garantizando la trazabilidad plena en todo el país.
+    </p>
+
+    <p>
+        <strong>La motivación detrás de la Ley:</strong> El proyecto no nace en un escritorio, sino de la experiencia personal. Franco vivió en primera persona la fragmentación del sistema: historias clínicas dispersas, diagnósticos inconexos y la burocracia de los trámites repetidos. Ese recorrido lo llevó a transformar la frustración de paciente en una propuesta técnica y operativa con una sola meta: <strong>que ninguna persona vuelva a atravesar las barreras de un sistema desconectado.</strong>
+    </p>
+
+    <p>
+        Con una visión centrada en el ciudadano y un compromiso real con la modernización, Franco impulsa hoy la Ley C.U.R.A. como el cambio estructural necesario para el futuro de la salud en Argentina.
+    </p>
                     </div>
                 </div>
             </div>
