--- a/index.html
+++ b/index.html
@@ -238,14 +238,21 @@
           Vos podés ser parte de la mayor transformación de la historia del sistema de Salud Digital Argentino.
         </p>
 
-        <div class="flex flex-wrap gap-3">
-          <button id="btn-sumate" type="button" class="inline-flex items-center justify-center px-4 py-2.5 rounded-full bg-white text-cura-primary text-sm font-semibold shadow-sm hover:bg-cura-accentLight hover:text-cura-primaryDark transition cursor-pointer">QUIERO SUMARME</button>
-          <button id="btn-info" type="button" class="inline-flex items-center justify-center px-4 py-2.5 rounded-full border border-cura-accent text-sm font-semibold text-cura-accentLight hover:bg-cura-accent hover:text-cura-primary transition">Obtén más información</button>
-          <a href="/Informacion/documentos/Resumen_Ejecutivo.pdf" class="btn-resumen-ejecutivo w-full">
-        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line></svg>
-        Resumen Ejecutivo
-    </a>
-        </div>
+ <div class="flex flex-col gap-3">
+  <div class="flex gap-3">
+    <button id="btn-sumate" type="button" class="flex-1 inline-flex items-center justify-center px-4 py-2.5 rounded-full bg-white text-cura-primary text-sm font-semibold shadow-sm hover:bg-cura-accentLight hover:text-cura-primaryDark transition cursor-pointer">
+      QUIERO SUMARME
+    </button>
+    <button id="btn-info" type="button" class="flex-1 inline-flex items-center justify-center px-4 py-2.5 rounded-full border border-cura-accent text-sm font-semibold text-cura-accentLight hover:bg-cura-accent hover:text-cura-primary transition">
+      Obtén más información
+    </button>
+  </div>
+
+ <a href="/Informacion/documentos/Resumen_Ejecutivo.pdf" target="_blank" class="btn-resumen-ejecutivo w-full">
+    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line></svg>
+    Resumen Ejecutivo
+  </a>
+</div>
 
         <p class="mt-6 text-[11px] text-cura-accentLight">
           Creada para mejorar la salud de todos, sin importar la obra social, la provincia o el nivel de complejidad del centro de salud.
