--- a/index.html
+++ b/index.html
@@ -204,17 +204,18 @@
 </div>
 
 
-  <header class="sticky top-0 z-30 bg-cura-primaryDark text-white border-b border-cura-accent/40 shadow-sm">
- <div class="max-w-5xl mx-auto px-4 py-3 flex flex-col sm:flex-row gap-3 sm:gap-4 sm:items-center sm:justify-between">
-    <div class="flex items-center gap-2">
-      <img src="/logo.png" alt="Logo C.U.R.A." class="h-16 w-auto object-contain shrink-0" />
+<header class="sticky top-0 z-30 bg-cura-primaryDark text-white border-b border-cura-accent/40 shadow-sm">
+  <div class="max-w-5xl mx-auto px-4 py-3 flex flex-col sm:flex-row gap-3 sm:gap-4 sm:items-center sm:justify-between">
+    
+    <a href="#inicio" class="nav-inicio-link flex items-center gap-2 group cursor-pointer">
+      <img src="/logo.png" alt="Logo C.U.R.A." class="h-16 w-auto object-contain shrink-0 transition-transform group-hover:scale-105" />
       <div class="leading-tight">
-        <p class="text-[11px] uppercase tracking-[0.25em] text-cura-accentLight">LEY NACIONAL</p>
+        <p class="text-[11px] uppercase tracking-[0.25em] text-cura-accentLight group-hover:text-white transition-colors">LEY NACIONAL</p>
         <p class="text-sm font-bold text-white">Transformación Digital Sanitaria Argentina</p>
       </div>
-    </div>
+    </a>
     <nav class="flex items-center gap-4 text-sm font-medium whitespace-nowrap justify-center sm:justify-end mt-2 sm:mt-0">
-      <a href="#inicio" class="text-cura-accentLight hover:text-white">Inicio</a>
+      <a href="#inicio" class="nav-inicio-link text-cura-accentLight hover:text-white">Inicio</a>
       <a href="#informacion" class="text-cura-accentLight hover:text-white">Información</a>
       <a href="#contacto" class="text-cura-accentLight hover:text-white">Contacto</a>
       <a href="/demo.html" class="inline-flex items-center gap-1 text-cura-primary bg-cura-accent rounded-full px-3 py-1 text-xs font-semibold hover:bg-white transition">Demostración</a>
