--- a/Informacion/objetivos.html
+++ b/Informacion/objetivos.html
@@ -105,18 +105,30 @@
             <a href="/Informacion/objetivos.html" class="block w-full bg-cura-card rounded-xl border border-cura-accent/40 p-6 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1 min-h-[450px] md:min-h-[350px]">
                 
              <p id="typewriter-text" class="whitespace-pre-wrap text-sm md:text-base text-white leading-relaxed cursor-blink">
-El Sistema C.U.R.A. tiene como objetivo central integrar toda la información sanitaria del país en una plataforma única, segura, interoperable y federal, garantizando que cada persona tenga acceso a su historia clínica completa en cualquier lugar y momento. Su misión es modernizar la infraestructura de salud, mejorar la calidad de la atención y reducir las desigualdades territoriales y administrativas.
- 
-C.U.R.A. busca asegurar continuidad asistencial, evitando pérdidas de información y reduciendo errores médicos mediante el acceso en tiempo real a los datos clínicos unificados. A través de estándares internacionales de interoperabilidad, conecta hospitales, provincias, obras sociales, PAMI, ART, laboratorios y farmacias dentro de un solo ecosistema digital.
+Introducción: La Infraestructura del Siglo XXI
+El Proyecto de Ley C.U.R.A. no es solo una plataforma tecnológica; es la infraestructura crítica que transforma la salud argentina en un ecosistema digital de alta eficiencia, soberano y centrado en la persona. Se establece como el mecanismo de ejecución operativa de la Ley 27.706, transformando la "voluntad digital" en un estándar de Orden Público.
 
-El sistema tiene además un fuerte enfoque en la eficiencia del gasto público: elimina duplicaciones de estudios, reduce trámites, optimiza el flujo de información y establece mecanismos de auditoría permanente, lo que permite reinvertir ahorros en equipamiento, insumos y recursos humanos.
+Ejes Estratégicos (Objetivos Principales)
+1. Soberanía Sanitaria Digital Garantizar que toda la infraestructura tecnológica y los datos sanitarios de los argentinos residan y sean procesados en territorio nacional. C.U.R.A. establece que la información médica es un activo estratégico de la Nación, blindado contra dependencias externas.
 
-Otro objetivo clave es fortalecer la seguridad y la soberanía sanitaria digital, garantizando que toda la infraestructura y los datos permanezcan en territorio nacional, bajo control público, con trazabilidad integral, autenticación robusta y privacidad por diseño.
+2. Empoderamiento y Propiedad del Paciente Restituir al ciudadano la propiedad efectiva de su historial médico. A través de la Credencial Única de Salud (C.U.S.), el paciente garantiza la portabilidad total de sus datos: su información lo acompaña, sin importar si se atiende en el sector público, privado o de seguridad social.
 
-C.U.R.A. también busca impulsar la equidad, asegurando que todos los ciudadanos reciban la misma calidad de atención sin importar su provincia, prestador o cobertura.
+3. Interoperabilidad Universal y Obligatoria Eliminar los "silos de información". El sistema impone el uso de estándares internacionales (HL7 FHIR y SNOMED CT) como norma de cumplimiento obligatorio para todos los subsectores, permitiendo que diferentes sistemas de salud hablen el mismo idioma por primera vez en la historia argentina.
 
-Finalmente, el sistema proyecta a la Argentina hacia un rol internacional, promoviendo la creación del Hub Global de Interoperabilidad Sanitaria, capaz de integrarse de forma segura con otros países y generar nuevas capacidades tecnológicas, científicas y económicas.
-                </p>
+4. Eficiencia Actuarial y Sostenibilidad Financiera Optimizar el gasto prestacional mediante la eliminación de la redundancia. Al evitar la duplicación de estudios, combatir el fraude de identidad y digitalizar la burocracia, el sistema proyecta un ahorro directo de hasta el 30% del gasto en salud, garantizando la viabilidad del sistema a largo plazo.
+
+5. Transformación hacia la Medicina Predictiva (IA) Transicionar de una medicina reactiva a una medicina basada en datos. Utilizar la Inteligencia Artificial de manera ética para el soporte diagnóstico, la vigilancia epidemiológica en tiempo real y la prevención personalizada, permitiendo al Estado anticiparse a crisis sanitarias.
+
+6. Liderazgo Global y Hub de Innovación Posicionar a la República Argentina como un referente regional en Salud Digital. Al implementar una red nacional unificada, el país se transforma en un Hub Global de Interoperabilidad, capaz de exportar conocimiento, tecnología y modelos de gestión sanitaria moderna.
+
+Metas de Impacto Directo
+Error Cero: Reducción drástica de errores médicos por falta de antecedentes clínicos al momento de la atención.
+
+Desburocratización: Eliminación total del papel en órdenes médicas, recetas y autorizaciones.
+
+Continuidad del Cuidado: Asegurar que un médico en Jujuy tenga el mismo acceso a la información crítica que un médico en Buenos Aires ante una emergencia.
+
+Transparencia: Auditoría en tiempo real del uso de recursos públicos y privados para evitar sobreprecios y malversaciones.
             </a>
         </div>
 <section id="sumate" class="space-y-6 pt-10 border-t border-cura-accent/20 w-full max-w-5xl mx-auto">
