--- a/Informacion/seg-priv.html
+++ b/Informacion/seg-priv.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" href="/favicon.ico" />
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <link rel="manifest" href="site.webmanifest">
-  <title>Marco Legal | Ley C.U.R.A.</title>
+  <title>Seguridad y Privacidad | Ley C.U.R.A.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
@@ -73,12 +73,12 @@
     <nav class="mb-8 flex items-center gap-2 text-sm text-cura-accentLight">
       <a href="/Informacion/informacion" class="hover:underline">Información</a>
       <span>/</span>
-      <span class="text-white">Marco Legal</span>
+      <span class="text-white">Seguridad y Privacidad</span>
     </nav>
 
     <div class="glass-card rounded-3xl p-8 md:p-12 shadow-2xl">
       <h1 class="text-3xl md:text-5xl font-extrabold mb-8 bg-clip-text text-transparent bg-gradient-to-r from-white to-cura-accentLight">
-        Marco Legal
+        Seguridad de Datos
       </h1>
 
       <div class="prose prose-invert max-w-none">
@@ -86,10 +86,10 @@
       </div>
 
       <div class="mt-12 pt-8 border-t border-white/10 flex flex-col sm:flex-row items-center justify-between gap-6">
-        <p class="text-cura-accentLight text-sm italic">Hacia una seguridad jurídica digital definitiva.</p>
+        <p class="text-cura-accentLight text-sm italic">Privacidad por diseño y soberanía tecnológica.</p>
         <div class="flex gap-4">
-          <a href="/Informacion/alcance" class="flex items-center gap-2 text-sm font-semibold hover:text-cura-accent transition">
-            Siguiente: Alcance Federal
+          <a href="/Informacion/marco-legal" class="flex items-center gap-2 text-sm font-semibold hover:text-cura-accent transition">
+            Siguiente: Marco Legal
             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/></svg>
           </a>
         </div>
@@ -105,7 +105,7 @@
     document.addEventListener('DOMContentLoaded', () => {
       const textElement = document.getElementById('typewriter-text');
       
-      const textToType = `<strong>1. Declaración de Orden Público:</strong> La Ley C.U.R.A. se establece como una norma de <strong>Orden Público</strong> en todo lo referente a la portabilidad de datos, interoperabilidad y estándares de ciberseguridad. Esto garantiza que el derecho del ciudadano a poseer su historia clínica digital es superior a cualquier normativa local o institucional, siendo de aplicación obligatoria en todo el territorio nacional de conformidad con la Constitución Nacional.<br><br><strong>2. Ejecución Operativa de la Ley 27.706:</strong> El sistema constituye el mecanismo técnico y operativo oficial para dar cumplimiento efectivo a la Ley Nacional de Historia Clínica Electrónica (27.706). C.U.R.A. transforma la "voluntad digital" de legislaciones previas en un estándar técnico vinculante, unificando el <strong>Sistema Único de Registro de Historias Clínicas Electrónicas (S.U.R.H.C.E.)</strong>.<br><br><strong>3. Federalismo de Concertación y Pacto de Mayo:</strong> En sintonía con el <strong>Pacto de Mayo</strong>, el proyecto se apoya en la institucionalidad del <strong>Consejo de Mayo</strong> como catalizador del federalismo moderno. Bajo el principio de <strong>Federalismo de Concertación</strong>, se invita a las provincias a adherir voluntariamente para alcanzar el equilibrio fiscal y la modernización administrativa, respetando sus autonomías pero unificando la "autopista digital" sanitaria.<br><br><strong>4. Soberanía Sanitaria Digital y Residencia de Datos:</strong> El marco legal impone la <strong>Residencia Obligatoria de Datos</strong> en territorio argentino. La infraestructura técnica debe ser provista de forma exclusiva por <strong>ARSAT</strong>, blindando la información sensible de los ciudadanos contra jurisdicciones extranjeras y garantizando que la soberanía tecnológica sea una política de Estado innegociable.<br><br><strong>5. Inmutabilidad y Respaldo Jurídico:</strong> Se otorga validez legal absoluta a los registros digitales integrados. Mediante el uso de <strong>Blockchain y Firma Digital</strong>, cada acto médico cuenta con un respaldo documental inalterable. Esto protege tanto al paciente como al profesional, eliminando la precariedad de los registros físicos o sistemas analógicos fácilmente adulterables.<br><br><strong>6. Protección Integral de Datos Personales:</strong> La ley refuerza los preceptos de la <strong>Ley 25.326</strong>, incorporando el principio de <strong>Privacidad por Diseño</strong>. Queda prohibido el uso de la información clínica para fines comerciales o políticos, estableciendo sanciones gravísimas y responsabilidad civil y penal para cualquier actor que vulnere la confidencialidad de los datos sanitarios.<br><br><strong>7. Máxima Eficiencia y Transparencia:</strong> El marco legal obliga a la <strong>Autoridad de Aplicación</strong> a publicar auditorías trimestrales de ejecución presupuestaria y métricas de ahorro operativo. La ley garantiza que el sistema sea autosostenible mediante la reinversión del <strong>100% de los ahorros</strong> generados por la despapelización y la eliminación de fraudes operativos en el sector público.`;
+      const textToType = `<strong>1. Privacidad por Diseño y Soberanía Tecnológica:</strong> El sistema se rige por el principio de <strong>Privacidad por Diseño</strong>, garantizando que la seguridad sea la base de la arquitectura. Bajo el concepto de <strong>Soberanía Sanitaria Digital</strong>, todos los datos se alojan exclusivamente en territorio nacional bajo la infraestructura crítica de <strong>ARSAT</strong>, quedando terminantemente prohibido el almacenamiento en servidores extranjeros.<br><br><strong>2. Inmutabilidad mediante Blockchain Gubernamental:</strong> C.U.R.A. implementa una capa de <strong>Blockchain</strong> para el registro de auditoría. Cada consulta, acceso o modificación de un dato médico genera un "hash" inalterable con sello de tiempo. Esto asegura que nadie pueda borrar o modificar los registros de quién accedió a la información, garantizando una <strong>Trazabilidad Forense</strong> inalterable por 10 años.<br><br><strong>3. Acceso Segmentado por Perfil de Usuario:</strong> El código QR de la Credencial Única de Salud (C.U.S.) actúa como una llave de acceso inteligente. La información revelada no es fija; el sistema valida la identidad y el rol de quien realiza el escaneo (médico, farmacéutico o personal de emergencia) y entrega únicamente los datos pertinentes para ese perfil, garantizando el principio de minimización de datos.<br><br><strong>4. Cifrado de Grado Militar y Ciberdefensa Activa:</strong> Toda la información se almacena y transmite bajo estándares de <strong>Cifrado de Extremo a Extremo</strong>. La red nacional está monitoreada 24/7 por el <strong>CSIRT-C.U.R.A.</strong>, un equipo especializado en ciberseguridad que actúa proactivamente contra amenazas externas y protege la integridad de la infraestructura crítica del Estado.<br><br><strong>5. Panel de Transparencia y Control Ciudadano:</strong> Se restituye al ciudadano el control total sobre su privacidad. A través de un <strong>Panel de Auditoría en Tiempo Real</strong>, cada persona puede verificar qué profesional o institución consultó su Historia Clínica, recibiendo notificaciones instantáneas y pudiendo reportar cualquier acceso no autorizado de forma inmediata.<br><br><strong>6. Uso Ético y Prohibición de Comercialización:</strong> La ley prohíbe taxativamente el uso de datos sanitarios para fines comerciales o políticos. La información solo puede ser utilizada para el cuidado directo del paciente o para fines estadísticos bajo protocolos de <strong>Anonimización Irreversible</strong>, donde la identidad del ciudadano queda blindada mediante algoritmos matemáticos.<br><br><strong>7. Auditoría Federal y Sanciones Gravísimas:</strong> La seguridad es auditada periódicamente por la <strong>SIGEN, AGN, ONTI y la AAIP</strong>. Cualquier intento de acceso indebido o manipulación de datos es considerado una falta gravísima, con sanciones penales y administrativas estrictas, asegurando que la confianza pública sea el activo más protegido del sistema.`;
 
       let i = 0;
       const speed = 5; 
