--- a/Informacion/alcance.html
+++ b/Informacion/alcance.html
@@ -88,8 +88,8 @@
       <div class="mt-12 pt-8 border-t border-white/10 flex flex-col sm:flex-row items-center justify-between gap-6">
         <p class="text-cura-accentLight text-sm italic">Federalismo moderno y gestión transparente.</p>
         <div class="flex gap-4">
-          <a href="/Informacion/informacion" class="flex items-center gap-2 text-sm font-semibold hover:text-cura-accent transition">
-            Volver a Información
+      <a href="/Informacion/interoperabilidad" class="flex items-center gap-2 text-sm font-semibold hover:text-cura-accent transition">
+            Siguiente: Interoperabilidad
             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/></svg>
           </a>
         </div>
