--- a/Informacion/faq.html
+++ b/Informacion/faq.html
@@ -88,7 +88,7 @@
       <div class="mt-12 pt-8 border-t border-white/10 flex flex-col sm:flex-row items-center justify-between gap-6">
         <p class="text-cura-accentLight text-sm italic">Transparencia absoluta para el ciudadano.</p>
         <div class="flex gap-4">
-          <a href="/Informacion/descargables" class="flex items-center gap-2 text-sm font-semibold hover:text-cura-accent transition">
+          <a href="/Informacion/recursos" class="flex items-center gap-2 text-sm font-semibold hover:text-cura-accent transition">
             Siguiente: Recursos Descargables
             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/></svg>
           </a>
