Actualizar historia-salud.html

--- a/historia-salud.html
+++ b/historia-salud.html
@@ -319,7 +319,7 @@
               <div class="timeline-sub">Laboratorio Central · Perfil Lipídico</div>
             </div>
           </div>
-          <button class="btn-primary">Ver Historia Completa</button>
+<button class="button-primary" type="button" onclick="window.location.href='historia-linica-completa.html'"> Ver Historia Clínica Completa </button>
         </section>
 
         <section id="view-cronologia" class="view-panel">
