Actualizar historia-salud.html

--- a/historia-salud.html
+++ b/historia-salud.html
@@ -319,8 +319,8 @@
               <div class="timeline-sub">Laboratorio Central · Perfil Lipídico</div>
             </div>
           </div>
-<button class="button-primary" type="button" onclick="window.location.href='historia-linica-completa.html'"> Ver Historia Clínica Completa </button>
-        </section>
+<button class="btn-primary" onclick="location.href='historia-clinica-completa.html'">Ver Historia Completa</button>
+     </section>
 
         <section id="view-cronologia" class="view-panel">
           <h2 class="section-label">Línea de tiempo federal</h2>
